--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   ],
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha tests --recursive"
+    "test": "mocha tests --recursive",
+    "publish": "node script/index"
   },
   "dependencies": {
     "requireindex": "~1.1.0"
@@ -18,11 +19,6 @@
     "husky": "^3.0.9",
     "inquirer": "^7.0.0",
     "mocha": "^6.2.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "node script/index"
-    }
   },
   "engines": {
     "node": ">=0.10.0"
