--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   "devDependencies": {
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
     "husky": "^3.0.9",
-    "mocha": "^6.2.1"
+    "mocha": "^6.2.1",
+    "prettier": "^1.19.0"
   },
   "husky": {
     "hooks": {
